--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   permission_handler: ^12.0.1
   flutter_svg: ^2.0.10+1
+  localstore: ^1.4.0
 
 dev_dependencies:
   flutter_test:
