--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   permission_handler: ^12.0.1
   flutter_svg: ^2.0.10+1
   localstore: ^1.4.0
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
